--- a/Model_sw_to_hw/SNN_config.json
+++ b/Model_sw_to_hw/SNN_config.json
@@ -5,8 +5,9 @@
   "num_inputs"          : 16,
   "num_hidden"          : 20,
   "num_outputs"         : 2,
-  "bias"                : enabled,
+  "bias"                : "enabled",
   "beta"                : 0.75,
   "threshold"           : 2,
   "reset_mechanism"     : "subtract"
+
 }
